Fixed tests, getting ready to submit patch

--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -108,6 +108,11 @@ ogone:
   password: PASSWORD
   signature: SIGNATURE
 
+orbital_gateway:
+  login: LOGIN
+  password: PASSWORD
+  merchant_id: MERCHANTID
+  
 payflow:
   login: LOGIN
   password: PASSWORD
